--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="is-preload">
 
-	<!-- Header -->
+	<!-- Header TEST new text -->
 	<header id="header">
 		<h1>Big Picture</h1>
 		<nav>
