--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		<nav>
 			<ul>
 				<li><a href="#intro">Intro</a></li>
-				<li><a href="#one">O que eu faço?</a></li>
-				<li><a href="#two">Quem eu sou?</a></li>
-				<li><a href="#work">Meus trabalhos</a></li>
-				<li><a href="#contact">Contato</a></li>
+				<li><a href="#o_que">O que eu faço?</a></li>
+				<li><a href="#quem">Quem eu sou?</a></li>
+				<li><a href="#trabalho">Meus trabalhos</a></li>
+				<li><a href="#contato">Contato</a></li>
 			</ul>
 		</nav>
 	</header>
